
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(test_dynlib VERSION 1.0 LANGUAGES CXX)

LIST( APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR} )
FIND_PACKAGE( LTDL )

ADD_LIBRARY(one SHARED libone.cpp)
ADD_LIBRARY(two SHARED libtwo.cpp)

ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES(main one ${LTDL_LIBRARIES})
